# temporal-credit-degradation-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/temporal_credit_degradation_detector/: __init__.py
src/temporal_credit_degradation_detector/data/: __init__.py  loader.py  preprocessing.py
src/temporal_credit_degradation_detector/evaluation/: __init__.py  metrics.py
src/temporal_credit_degradation_detector/models/: __init__.py  components.py  model.py
src/temporal_credit_degradation_detector/training/: __init__.py  trainer.py
src/temporal_credit_degradation_detector/utils/: __init__.py  config.py  logging_utils.py
tests/: __init__.py  conftest.py  test_config.py  test_data.py  test_error_handling.py  test_integration.py  test_model.py  test_training.py
